# gpPanel

./: .gitignore  CMakeLists.txt  README.md
include/: Fourier.inline.h  mathplot.h
src/: CMakeLists.txt  mathplot.cpp
